# pochimethod

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  README.md  pyproject.toml
pochi/: __init__.py  pochi.py
pochi/config/: __init__.py  facade.py  interfaces.py  json_loader.py  python_loader.py  yaml_loader.py
pochi/directory/: __init__.py  creator.py
pochi/fileops/: __init__.py  copier.py  finder.py  interfaces.py
pochi/logging/: __init__.py  factory.py  formatters.py  handlers.py  interfaces.py
pochi/registry/: __init__.py  interfaces.py  registry.py
pochi/timer/: __init__.py  interfaces.py  timer.py
pochi/workspace/: __init__.py  creator.py  interfaces.py  models.py  timestamp.py
tests/: __init__.py  test_config.py  test_directory.py  test_fileops.py  test_logging.py  test_placeholder.py  test_pochi.py  test_registry.py  test_timer.py  test_workspace.py
