[project]
name = "pochimethod"
version = "0.0.1"
description = "A versatile method collection for Python — Pochi's favorite bones, all in one place!"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [{ name = "kurorosu" }]
keywords = ["utility", "logging", "timer", "workspace"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/torikatsu923/pochimethod"
Repository = "https://github.com/torikatsu923/pochimethod"
Issues = "https://github.com/torikatsu923/pochimethod/issues"

[dependency-groups]
dev = [
    "black>=25.12.0",
    "detect-secrets>=1.5.0",
    "isort>=7.0.0",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pydocstyle>=6.3.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
]

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pydocstyle]
convention = "google"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pochi"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=. --cov-report=term-missing"
